# Student-Worksheet-Flattener

./: .gitignore  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: app.py
src/.streamlit/: config.toml
src/scripts/: flatten_student_worksheet.py
src/scripts/models/: student_worksheet.py
